--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "daisyui": "^4.4.2",
+    "tailwindcss": "^3.3.5"
   }
 }
