--- a/my-portfolio/src/components/projects/projects.json
+++ b/my-portfolio/src/components/projects/projects.json
@@ -1,6 +1,45 @@
 [
   {
     "id": 2,
+    "name": "Survey Form",
+    "resumen": "Formulario para estudia",
+    "description": "Formulario en el cual se puede ingresar informacion personal y acerca de nuestra carrera estudiantil",
+    "image": "https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/SurveyForm.jpg?alt=media&token=968748ad-3533-4607-a6ea-85a73a9c7db0",
+    "mockup":"https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/mockups%2FSurveyForm.png?alt=media&token=bb84d268-e614-4a0b-89f0-071a00313a3f",
+    "span": [
+      "HTML",
+      "CSS"
+    ],
+    "technologies": [
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 32 32\"><path fill=\"#e44f26\" d=\"M5.902 27.201L3.655 2h24.69l-2.25 25.197L15.985 30L5.902 27.201z\"/><path fill=\"#f1662a\" d=\"m16 27.858l8.17-2.265l1.922-21.532H16v23.797z\"/><path fill=\"#ebebeb\" d=\"M16 13.407h-4.09l-.282-3.165H16V7.151H8.25l.074.83l.759 8.517H16v-3.091zm0 8.027l-.014.004l-3.442-.929l-.22-2.465H9.221l.433 4.852l6.332 1.758l.014-.004v-3.216z\"/><path fill=\"#fff\" d=\"M15.989 13.407v3.091h3.806l-.358 4.009l-3.448.93v3.216l6.337-1.757l.046-.522l.726-8.137l.076-.83h-7.185zm0-6.256v3.091h7.466l.062-.694l.141-1.567l.074-.83h-7.743z\"/></svg>",
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 128 128\"><path fill=\"#1572B6\" d=\"M18.814 114.123L8.76 1.352h110.48l-10.064 112.754l-45.243 12.543l-45.119-12.526z\"/><path fill=\"#33A9DC\" d=\"m64.001 117.062l36.559-10.136l8.601-96.354h-45.16v106.49z\"/><path fill=\"#fff\" d=\"M64.001 51.429h18.302l1.264-14.163H64.001V23.435h34.682l-.332 3.711l-3.4 38.114h-30.95V51.429z\"/><path fill=\"#EBEBEB\" d=\"m64.083 87.349l-.061.018l-15.403-4.159l-.985-11.031H33.752l1.937 21.717l28.331 7.863l.063-.018v-14.39z\"/><path fill=\"#fff\" d=\"m81.127 64.675l-1.666 18.522l-15.426 4.164v14.39l28.354-7.858l.208-2.337l2.406-26.881H81.127z\"/><path fill=\"#EBEBEB\" d=\"M64.048 23.435v13.831H30.64l-.277-3.108l-.63-7.012l-.331-3.711h34.646zm-.047 27.996v13.831H48.792l-.277-3.108l-.631-7.012l-.33-3.711h16.447z\"/></svg>"
+     
+    ],
+    "github": "https://github.com/emilianodebenedetti/SurveyForm-freeCodeCamp.git",
+    "link": "https://survey-form-free-code-camp-ykaf.vercel.app/"
+  },
+  {
+    "id": 1,
+    "name": "To do list",
+    "resumen": "App para organizar tareas",
+    "description": "Lista en la cual podemos agregar, marcar como hechas y eliminar tareas fácilmente.",
+    "image": "https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/ToDoList.jpg?alt=media&token=29c26dfa-5755-4e01-a401-e6e73adf3b96",
+    "mockup":"https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/mockups%2FTo%20Do%20List%20Mockup.png?alt=media&token=b297e0a8-da2c-485e-ab99-aaa05cdc3d53",
+    "span": [
+      "HTML",
+      "CSS",
+      "JavaScript"
+    ],
+    "technologies": [
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 32 32\"><path fill=\"#e44f26\" d=\"M5.902 27.201L3.655 2h24.69l-2.25 25.197L15.985 30L5.902 27.201z\"/><path fill=\"#f1662a\" d=\"m16 27.858l8.17-2.265l1.922-21.532H16v23.797z\"/><path fill=\"#ebebeb\" d=\"M16 13.407h-4.09l-.282-3.165H16V7.151H8.25l.074.83l.759 8.517H16v-3.091zm0 8.027l-.014.004l-3.442-.929l-.22-2.465H9.221l.433 4.852l6.332 1.758l.014-.004v-3.216z\"/><path fill=\"#fff\" d=\"M15.989 13.407v3.091h3.806l-.358 4.009l-3.448.93v3.216l6.337-1.757l.046-.522l.726-8.137l.076-.83h-7.185zm0-6.256v3.091h7.466l.062-.694l.141-1.567l.074-.83h-7.743z\"/></svg>",
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 128 128\"><path fill=\"#1572B6\" d=\"M18.814 114.123L8.76 1.352h110.48l-10.064 112.754l-45.243 12.543l-45.119-12.526z\"/><path fill=\"#33A9DC\" d=\"m64.001 117.062l36.559-10.136l8.601-96.354h-45.16v106.49z\"/><path fill=\"#fff\" d=\"M64.001 51.429h18.302l1.264-14.163H64.001V23.435h34.682l-.332 3.711l-3.4 38.114h-30.95V51.429z\"/><path fill=\"#EBEBEB\" d=\"m64.083 87.349l-.061.018l-15.403-4.159l-.985-11.031H33.752l1.937 21.717l28.331 7.863l.063-.018v-14.39z\"/><path fill=\"#fff\" d=\"m81.127 64.675l-1.666 18.522l-15.426 4.164v14.39l28.354-7.858l.208-2.337l2.406-26.881H81.127z\"/><path fill=\"#EBEBEB\" d=\"M64.048 23.435v13.831H30.64l-.277-3.108l-.63-7.012l-.331-3.711h34.646zm-.047 27.996v13.831H48.792l-.277-3.108l-.631-7.012l-.33-3.711h16.447z\"/></svg>",
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 256 256\"><path fill=\"#F7DF1E\" d=\"M0 0h256v256H0V0Z\"/><path d=\"m67.312 213.932l19.59-11.856c3.78 6.701 7.218 12.371 15.465 12.371c7.905 0 12.89-3.092 12.89-15.12v-81.798h24.057v82.138c0 24.917-14.606 36.259-35.916 36.259c-19.245 0-30.416-9.967-36.087-21.996m85.07-2.576l19.588-11.341c5.157 8.421 11.859 14.607 23.715 14.607c9.969 0 16.325-4.984 16.325-11.858c0-8.248-6.53-11.17-17.528-15.98l-6.013-2.58c-17.357-7.387-28.87-16.667-28.87-36.257c0-18.044 13.747-31.792 35.228-31.792c15.294 0 26.292 5.328 34.196 19.247l-18.732 12.03c-4.125-7.389-8.591-10.31-15.465-10.31c-7.046 0-11.514 4.468-11.514 10.31c0 7.217 4.468 10.14 14.778 14.608l6.014 2.577c20.45 8.765 31.963 17.7 31.963 37.804c0 21.654-17.012 33.51-39.867 33.51c-22.339 0-36.774-10.654-43.819-24.574\"/></svg>"
+    ],
+    "github": "https://github.com/emilianodebenedetti/to-do-list.git",
+    "link": "https://to-do-list-phi-lime.vercel.app/"
+  },
+  {
+    "id": 3,
     "name": "",
     "resumen": "Tienda Web",
     "description": "Tienda web conectada a una amplia base de datos de Firebase, en la cual podemos buscar articulos por nombre, filtrarlos por categoria y podemos agregarlos al carrito de compras. Las ordenes de compras se pasan con todos sus detalles por WhatsApp.",
@@ -27,7 +66,7 @@
     "link": "https://unifitlove.com.uy/"
   },
   {
-    "id": 3,
+    "id": 4,
     "name": "Control de Stock",
     "resumen": "Universal Fitness CRUD",
     "description": "App conectada a la misma base que Universal Fitness, en la cual podemos buscar articulos por nombre, filtrarlos por categoria, agregar, editar y eliminarlos.",
@@ -55,7 +94,7 @@
     "link": ""
   },
   {
-    "id": 4,
+    "id": 5,
     "name": "Portfolio Victoria",
     "resumen": "Portfolio de moda",
     "description": "Portfolio en el cual se muestran proyectos de moda, al entrar a cada proyecto vemos un carrusel de imagenes y los detalles de cada uno.",
@@ -82,10 +121,10 @@
     "link": "https://victorialinaro.com.uy/"
   },
   { 
-    "id": 10,
+    "id": 6,
     "name": "MyWeatherApp",
     "resumen": "Simulador de pronostico del tiempo",
-    "description": "En esta app podemos visualizar el clima de la ciudad que queramos. Primero ingresamos el pais y luego nos lista las ciudades del pais seleccionado, todo en orden alfabético.",
+    "description": "En esta app podemos visualizar el clima de la ciudad que queramos. Primero ingresamos el pais y luego nos lista las ciudades del pais seleccionado, todo.",
     "image": "https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/MyWeatherApp.jpg?alt=media&token=660d5867-ef51-48da-94de-62d2c672983d",
     "mockup":"https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/mockups%2FMyWeatherApp.png?alt=media&token=2895e74c-a1d4-4358-9f29-ddb0990465d6",
     "span": [
@@ -109,7 +148,7 @@
     "link": "https://my-weather-app-sable.vercel.app/"
   },
   {
-    "id": 5,
+    "id": 7,
     "name": "MiTienda",
     "resumen": "Prototipo de tienda",
     "description": "Modelo de tienda web en el cual podemos filtrar los articulos por categoria, agregarlos al carrito de compras y finalizar la compra completando un formulario.",
